# NameSort

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
include/: constants.h  file_io.h  name_string.h  string_vector.h
src/: file_io.c  main.c  name_string.c  string_vector.c
test/: Sort Me 2.txt  Sorted 2.txt  Sorted 4.txt  Sorted.txt  Test.bat  Test.cmd  Test.sh
